--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
     "name": "edumap",
     "version": "0.0.1",
-	"engines": {
-		"node": "10.x.x"
-	},
-	"engines": {
-		"node": "10.x.x"
-	},
-	"dependencies": {
-		"d3": "^5.16.0",
-		"d3-node": "^2.2.1"
-	},
-	"scripts": {
-		"server": "NODE_ENV=local node server"
-	}
+    "engines": {
+        "node": "10.x.x"
+    },
+    "dependencies": {
+        "d3": "^5.16.0",
+        "d3-node": "^2.2.1",
+        "express": "^4.18.2"
+    },
+    "scripts": {
+        "server": "NODE_ENV=local node server"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.23.2",
+        "@babel/preset-env": "^7.23.2",
+        "babel-loader": "^9.1.3"
+    }
 }
