--- a/edumapai/package.json
+++ b/edumapai/package.json
@@ -2,6 +2,7 @@
   "name": "edumapai",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@observablehq/runtime": "^5.9.4",
     "@testing-library/jest-dom": "^5.17.0",
