--- a/edumapai/package.json
+++ b/edumapai/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
     "@observablehq/runtime": "^5.9.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
